<resources>
    <string name="app_name">Counter</string>
    <string name="action_new_date">Count again</string>
    <string name="action_add">Add: Write</string>
    <string name="action_replace_money">Change earn/h</string>
    <string name="action_timer">Add: Timer</string>
    <string name="text_welcome">This application helps you to make count your earn!</string>
    <string name="button_stop">Stop</string>
    <string name="button_start">Start</string>
    <string name="text_all_time">All time</string>
    <string name="all_time">00:00</string>
    <string name="text_all_cash">All earn</string>
    <string name="all_cash">0,00</string>
</resources>
