<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.tatyana.counterandroidst.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_welcome"
        android:textIsSelectable="false"
        android:textSize="25sp"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="320dp"
        android:layout_height="77dp"
        android:text="@string/text_all_time"
        android:id="@+id/text_all_time"
        android:layout_below="@id/textView2"
        android:textColor="#000000"
        android:textSize="35sp"
        android:gravity="center_horizontal|bottom"
         />
    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/all_time"
        android:id="@+id/all_time"
        android:layout_below="@id/text_all_time"
        android:textSize="35sp"
        android:textColor="#CF3476"
        android:gravity="center_horizontal|center"
        />
    <TextView
        android:layout_width="320dp"
        android:layout_height="110dp"
        android:text="@string/text_all_cash"
        android:id="@+id/text_all_cash"
        android:layout_below="@id/text_all_time"
        android:textColor="#000000"
        android:textSize="35sp"
        android:gravity="center_horizontal|bottom"
        />
    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/all_cash"
        android:id="@+id/all_cash"
        android:layout_below="@id/text_all_cash"
        android:textColor="#CF3476"
        android:textSize="35sp"
        android:gravity="center_horizontal|center"
        />


</RelativeLayout>
